test/fail/asyncret1.mo
func call3<C <: Any>(f : shared () -> C) : C { f (); };
